Penalty editing works and added data sanity checks
All penalty information can now be edited interactively.  Sanity
checks look at the inputs before committing them.  If errors are
found, the user is notified with a temporary onscreen message, the
fields are highlighted, and no more updates are made until the
values are corrected.

Fixed validation of player edits too (it was allowing too many
special characters in text fields).

--- a/templates/penalties.html
+++ b/templates/penalties.html
@@ -1,7 +1,7 @@
 <tr class="penaltyEditor" data-scoreid="{{ scoreid }}">
   <td></td>
   <td colspan="7">
-    <table class="penaltyEditor">
+    <table class="penaltyEditorTable">
       <thead>
 	<th>Penalty</th>
 	<th>Description</th>
