Use standard triangle glyphs instead of images for penalty editor control
Added some color to the glyphs and made them change cursor shape
when hovering.

--- a/static/css/colors/00-default.css
+++ b/static/css/colors/00-default.css
@@ -61,6 +61,10 @@ table td {
 	border:3px solid #555;
 }
 
+.sectionControl {
+    color: #cce;
+}
+
 input[type="checkbox"].priority + label {
 	border: 5px solid #555;
 }
