Prepare for enabling penalty editor when first score entered for a table.
Currently, it takes a page refresh to enable penalty entry when the
first scores are entered for a table.  Once the score record IDs are
available, the penalty entry should become available.

--- a/templates/tables.html
+++ b/templates/tables.html
@@ -64,9 +64,11 @@
 								<td class="rank">{{ player['player']['rank'] }}</td>
 								<td class="score">{{ player['player']['score'] }}</td>
 								<td class="penalty">
-								  {% if player['player']['scoreid'] and (current_user or player['player']['penalty'] != 0) %}
-								  <span class="sectionControl" data-scoreid="{{ player['player']['scoreid'] }}">&#9654;</span>
-								  {% end %}
+								  <span class="sectionControl" data-scoreid="{{ player['player']['scoreid'] }}">
+								    {% if player['player']['scoreid'] and (current_user or player['player']['penalty'] != 0) %}
+								    &#9654;
+								    {% end %}
+								  </span>
 								   <span class="playerpenalty">{{ player['player']['penalty'] }}</span>
 								</td>
 								{% if is_admin and not round['has_scores'] %}
