--- a/templates/invite.html
+++ b/templates/invite.html
@@ -10,7 +10,7 @@
 		{% end %}
 	{% except %}{% end %}
 
-	<form action="/invite" method="post">
+	<form action="invite" method="post">
 		<input autocapitalize="off" autocorrect="off" autofocus="autofocus" id="email-field" name="email" placeholder="EMAIL" type="text" /><br/>
 
 		<input type="submit" value="Invite"/>
