--- a/templates/playerstats.html
+++ b/templates/playerstats.html
@@ -22,7 +22,7 @@
 			<div id="statshistory">
 				<h2>Recently Viewed</h2>
 				{% for item in history %}
-					<a href="/playerstats/{{ item }}">{{ item }}</a><br />
+					<a href="playerstats/{{ item }}">{{ item }}</a><br />
 				{% end %}
 			</div>
 		{% end %}
