--- a/templates/resetpassword.html
+++ b/templates/resetpassword.html
@@ -12,7 +12,7 @@
 	{% except %}{% end %}
 
 	<p>Reset password for {{ email }}</p>
-	<form action="/reset/{{ id }}" method="post">
+	<form action="reset/{{ id }}" method="post">
 		<input id="password-field" name="password" placeholder="PASSWORD" type="password" /><br/>
 
 		<input id="vpassword-field" name="vpassword" placeholder="REPEAT PASSWORD" type="password" /><br/>
