--- a/templates/setup.html
+++ b/templates/setup.html
@@ -12,7 +12,7 @@
 
         <p>Enter the email address for first account.
 	  This account will have administrator privileges.</p>
-	<form action="/setup" method="post">
+	<form action="setup" method="post">
 		<input autocapitalize="off" autocorrect="off" autofocus="autofocus" id="email-field" name="email" placeholder="EMAIL" type="text" /><br/>
 
 		<input type="submit" value="Invite"/>
