--- a/templates/forgotpassword.html
+++ b/templates/forgotpassword.html
@@ -5,7 +5,7 @@
 {% block content%}
 	<h1 id="page-name">Reset Password</h1>
 
-	<form action="/reset" method="post">
+	<form action="reset" method="post">
 		<input autocapitalize="off" autocorrect="off" id="email-field" name="email" placeholder="EMAIL" type="text" {% try %}{% if email is not None %}value="{{ email }}"{% end %}{% except %}{% end %}/><br/>
 
 		<input type="submit" value="Send"/>
