--- a/templates/verify.html
+++ b/templates/verify.html
@@ -10,7 +10,7 @@
 		{% end %}
 	{% except %}{% end %}
 
-	<form action="/verify/{{ id }}" method="post">
+	<form action="verify/{{ id }}" method="post">
 		<input autocapitalize="off" autocorrect="off" id="email-field" name="email" placeholder="EMAIL" type="text" {% try %}{% if email is not None %}value="{{ email }}"{% end %}{% except %}{% end %}/><br/>
 
 		<input id="password-field" name="password" placeholder="PASSWORD" type="password" /><br/>
@@ -19,5 +19,5 @@
 
 		<input type="submit" value="Signup"/>
 	</form>
-	Already have an account? <a href="/login">Login.</a>
+	Already have an account? <a href="login">Login.</a>
 {% end %}
