Add PROXYPREFIX setting for URL construction inside proxied sites
Also added tournament name to the base template so it appears at
the top of each page.

--- a/templates/template.html
+++ b/templates/template.html
@@ -47,7 +47,15 @@
 				<a href="invite">Invite</a>
 				<a href="logout?next={{ request.uri }}">Logout</a>
 			{% end %}
-		</div>
+	  </div>
+	  <div id="tournamet_title">
+	    {% try %}
+	      {% if tournamentname %} {{ tournamentname }}
+	      {% else %} Tournament Mahjong {% end %}
+	    {% except %}
+	      Tournament Mahjong
+	    {% end %}
+	  </div>
 		<div id="content">
 			{% block content %}{% end %}
 		</div>
