--- a/templates/players.html
+++ b/templates/players.html
@@ -1,4 +1,4 @@
-<script src="{{ static_url("js/players.js") }}" type="text/javascript"></script>
+<script src="{{ proxyprefix.rstrip('/') + static_url("js/players.js") }}" type="text/javascript"></script>
 <table>
     <tr>
 	<th class="colheader" data-type="str" data-fieldname="name">
