--- a/templates/playerstats.html
+++ b/templates/playerstats.html
@@ -3,9 +3,11 @@
 {% block title %} - {{ name }}'s Stats{% end %}
 
 {% block head %}
-	<link href="{{ static_url("css/playerstats.css") }}" type="text/css" rel="stylesheet" />
+<link href="{{ proxyprefix.rstrip('/') + static_url("css/playerstats.css") }}"
+      type="text/css" rel="stylesheet" />
 
-<script src="{{ static_url("js/playerstats.js") }}" type="text/javascript"></script>
+<script src="{{ proxyprefix.rstrip('/') + static_url("js/playerstats.js") }}"
+	type="text/javascript"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.10.2/d3.min.js" type="text/javascript"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/2.2.1/mustache.min.js" type="text/javascript"></script>
 {% end %}
