--- a/templates/roundsettings.html
+++ b/templates/roundsettings.html
@@ -1,4 +1,5 @@
-<script src="{{ static_url('js/roundsettings.js') }}" type="text/javascript" />
+<script src="{{ proxyprefix.rstrip('/') + static_url('js/roundsettings.js') }}"
+	type="text/javascript" />
 <button id="addround">Add Round</button>
 {% for round in rounds %}
 	<div class="round" data-roundid="{{ round['id'] }}">
