--- a/templates/tables.html
+++ b/templates/tables.html
@@ -1,4 +1,5 @@
-<script src="{{ static_url("js/tables.js") }}" type="text/javascript"></script>
+<script src="{{ proxyprefix.rstrip('/') + static_url("js/tables.js") }}"
+	type="text/javascript"></script>
 <div id="seating">
 	<ul>
 		{% for round in rounds %}
