--- a/templates/template.html
+++ b/templates/template.html
@@ -13,24 +13,24 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width = device-width, initial-scale = 1.0, user-scalable=no" />
 
-		<link rel="icon" type="image/png" href="{{ static_url("images/favicon.png") }}" />
+		<link rel="icon" type="image/png" href="{{ proxyprefix.rstrip('/') + static_url("images/favicon.png") }}" />
 
 		<link href='https://fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css' />
 		<link href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.css" rel="stylesheet" type="text/css" />
 		<link href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.theme.min.css" rel="stylesheet" type="text/css" />
-		<link href="{{ static_url("css/style.css") }}" type="text/css" rel="stylesheet" />
+		<link href="{{ proxyprefix.rstrip('/') + static_url("css/style.css") }}" type="text/css" rel="stylesheet" />
 
 		{% if current_user and stylesheet %}
-			<link href="{{ static_url("css/colors/" + stylesheet) }}" type="text/css" rel="stylesheet" />
+			<link href="{{ proxyprefix.rstrip('/') + static_url("css/colors/" + stylesheet) }}" type="text/css" rel="stylesheet" />
 		{% else %}
-			<link href="{{ static_url("css/colors/00-default.css") }}" type="text/css" rel="stylesheet" />
+			<link href="{{ proxyprefix.rstrip('/') + static_url("css/colors/00-default.css") }}" type="text/css" rel="stylesheet" />
 		{% end %}
 
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/2.2.1/mustache.min.js" type="text/javascript"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/notify/0.4.2/notify.min.js" type="text/javascript"></script>
-		<script src="{{ static_url("js/script.js") }}"></script>
+		<script src="{{ proxyprefix.rstrip('/') + static_url("js/script.js") }}"></script>
 
 		{% block head %}{% end %}
 	</head>
