--- a/templates/preferences.html
+++ b/templates/preferences.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 	<h1>User Preferences</h1>
-	<form action="preferences" method="post" id="preferencesform">
+	<form action="{{ proxyprefix }}preferences" method="post" id="preferencesform">
 		<label for="email">Email: </label>
 		<input id="email" name="email" type="text" value="{{ email }}" />
 		<label for="stylesheet">Stylesheet: </label>
