Allow full processing through reverse proxy server.
Fix all URL's in web pages and emails to properly handle optional operation
under a reverse proxy.  Adds a default setting for SERVERPREFIX which
provides the scheme, server, and port number that users will see in URLs.
That is different from the request URI passed by the reverse proxy to the
web server.

Moved tournamentname variable to default render routine in all request
handlers to make Tournament name appear in all web pages.

Fixed bugs for InviteHandler to correctly handle next URI when
unauthenticated.

--- a/templates/verify.html
+++ b/templates/verify.html
@@ -10,7 +10,7 @@
 		{% end %}
 	{% except %}{% end %}
 
-	<form action="verify/{{ id }}" method="post">
+	<form action="./{{ id }}" method="post">
 		<input autocapitalize="off" autocorrect="off" id="email-field" name="email" placeholder="EMAIL" type="text" {% try %}{% if email is not None %}value="{{ email }}"{% end %}{% except %}{% end %}/><br/>
 
 		<input id="password-field" name="password" placeholder="PASSWORD" type="password" /><br/>
