Swapped in Seattle Riichi logo and link for navigation bar

--- a/templates/template.html
+++ b/templates/template.html
@@ -35,9 +35,9 @@
 		{% block head %}{% end %}
 	</head>
 	<body>
-	  <a href="https://worldriichi.org/" target="_blank">
-	    <img src="{{ static_url("images/favicon.png") }}" class="sitelogo"
-		 alt="Logo"></a>
+	  <a href="https://seattlemahjong.club/" target="_blank">
+	    <img src="{{ static_url("images/seattle_richi_mahjong_club_logo.jpeg") }}"
+		 class="sitelogo" alt="Logo"></a>
 	  <div id="navbar">
 			<a href="/">Home</a>
 			{% if not current_user %}
