--- a/static/css/tournament.css
+++ b/static/css/tournament.css
@@ -17,3 +17,32 @@
 		padding:0;
 	}
 }
+
+
+#players > table tr > *:nth-of-type(1) {
+	width:20em;
+}
+#players > table tr > *:nth-of-type(2) {
+	width:2em;
+}
+#players > table tr > *:nth-of-type(3) {
+	width:2em;
+}
+#players > table tr > *:nth-of-type(4) {
+	width:1em;
+}
+#players > table tr > *:nth-of-type(5) {
+	width:5em;
+}
+#players > table tr > *:nth-of-type(6) {
+	width:5em;
+}
+#players > table tr > *:nth-of-type(7) {
+	width:5em;
+}
+#players > table tr > *:nth-of-type(8) {
+	width:10em;
+}
+#players > table td:not(.type) > input {
+	width:100%;
+}
