--- a/templates/tournament.html
+++ b/templates/tournament.html
@@ -15,7 +15,7 @@
 		<li><a href="{{ proxyprefix }}seating.html">Seating</a></li>
 		<li data-id="players"><a href="#players">Players</a></li>
 	  {% if is_admin %}
-		<li data-id="users"><a href="#users">Users</a></li>
+		<li><a href="{{ proxyprefix }}users.html">Users</a></li>
 		<li><a href="{{ proxyprefix }}settings.html">Settings</a></li>
 	  {% end %}
 	</ul>
