--- a/templates/tournament.html
+++ b/templates/tournament.html
@@ -2,6 +2,9 @@
 {% block head %}
 		<link href="{{ proxyprefix.rstrip('/') + static_url("css/tournament.css") }}" type="text/css" rel="stylesheet" />
 		<script src="{{ proxyprefix.rstrip('/') + static_url("js/tournament.js") }}"></script>
+		<script>
+		  var tab = {% if tab %}"{{ tab }}"{% else %}null{% end %};
+		</script>
 {% end %}
 {% block content %}
 <div id="tournament">
