--- a/templates/scoreboard.html
+++ b/templates/scoreboard.html
@@ -11,7 +11,7 @@
 		<th>STATUS</th>
 		{% for round in rounds %}
 			<th>RANK</th>
-			<th>SCORE</th>
+			<th>POINTS</th>
 			<th>PENALTY</th>
 			<th>TOTAL</th>
 		{% end %}
