--- a/templates/tables.html
+++ b/templates/tables.html
@@ -1,3 +1,4 @@
+<script>umas4 = {{ umas_4_player }}; </script>
 <script src="{{ proxyprefix.rstrip('/') + static_url("js/tables.js") }}"
 	type="text/javascript"></script>
 <div id="seating">
