Update SRMC logo and make sponsor link a configurable setting.

--- a/templates/template.html
+++ b/templates/template.html
@@ -34,8 +34,8 @@
 		{% block head %}{% end %}
 	</head>
 	<body>
-	  <a href="https://seattlemahjong.club/" target="_blank">
-	    <img src="{{ proxyprefix.rstrip('/') + static_url("images/seattle_richi_mahjong_club_logo.jpeg") }}"
+	  <a href="{{ SponsorLink }}" target="_blank">
+	    <img src="{{ proxyprefix.rstrip('/') + static_url("images/SRMC-logo.png") }}"
 		 class="sitelogo" alt="Logo"></a>
 	  <div id="navbar">
 			<a href="{{ proxyprefix }}">Home</a>
