--- a/templates/leaderboard.html
+++ b/templates/leaderboard.html
@@ -12,7 +12,7 @@
 	{% for row in leaderboard %}
 		<tr class="leaderbd_row" data-status="{{ row['type'] }}">
 			<td>{{ row['place'] }}</td>
-			<td><a href="playerstats/{{ row['name'] }}">{{ row['name'] }}</a></td>
+			<td><a href="{{ proxyprefix }}playerstats/{{ row['id'] }}">{{ row['name'] }}</a></td>
 			<td>{{ row['country'] }}</td>
 			<td>{% raw row['flag_image'] %}</td>
 			<td>{{ row['games_played'] }}</td>
