Make Leaderboard/Standings auto refresh every 5 seconds

--- a/templates/tournament.html
+++ b/templates/tournament.html
@@ -16,7 +16,8 @@
 		 {{ tournamentname }}
 	</div>
 	<ul>
-		<li><a href="leaderboard.html">Standings</a></li>
+		<li data-refresh="5000">
+		  <a href="leaderboard.html">Standings</a></li>
 		<li><a href="scoreboard">Scores</a></li>
 		<li><a href="seating.html">Seating</a></li>
 		<li data-id="players"><a href="#players">Players</a></li>
