Expand tournament fields and display all in single list
This change adds fields for the dates, location, logo, and link URL
associated with each tournament.  It can display them in the tournamant
list and provide an editing dialog to owners or admins to change them.
The editing doesn't work yet, only the storage and display.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -160,6 +160,10 @@ button.clearplayercomplete {
     display:none;
 }
 
+.listing {
+	margin: auto;
+}
+
 #currentUsers {
 	width: 90%;
 	margin: auto;
