Enable unauthenticated access and control authenticated editing of tournaments
The list of tournaments now shows to unauthenticated users.  Authenticated
users can edit and delete their own tournaments.  Admins can do all that
plus re-assign ownership of tournaments.

--- a/templates/edittournament.html
+++ b/templates/edittournament.html
@@ -19,18 +19,20 @@ Tournament Settings
       <td class="attributelabel">Owner</td>
       <td class="attributevalue" data-type="str"
 	  colspan=2>
-	{% if is_admin %}
 	<select id="ownerfield" data-colname="Owner" name="Owner" >
-	  {% for userId in users %}
-	    <option value="{{ userId }}"
-		    {% if tournament['Owner'] == userId %} selected {% end %}>
-	      {{ users[userId] }}
-	    </option>
+	  {% if is_admin %}
+	    {% for userId in users %}
+	      <option value="{{ userId }}"
+		      {% if tournament['Owner'] == userId %} selected {% end %}>
+		{{ users[userId] }}
+	      </option>
+	    {% end %}
+	  {% else %}
+	      <option value="{{ tournament['Owner'] }}" selected>
+		{{ users[tournament['Owner']] }}
+	      </option>
 	  {% end %}
 	</select>
-	{% else %}
-	{{ tournament['OwnerName'] }}
-	{% end %}
       </td>
     </tr>
     <tr>
