--- a/templates/tournament.html
+++ b/templates/tournament.html
@@ -21,7 +21,7 @@
 		<li><a href="scoreboard">Scores</a></li>
 		<li><a href="seating.html">Seating</a></li>
 		<li data-id="players"><a href="#players">Players</a></li>
-	  {% if is_admin %}
+	  {% if is_admin or (current_user and current_user == str(owner)) %}
 		<li><a href="settings.html">Settings</a></li>
 	  {% end %}
 	</ul>
