Made round names editable
Each round now has a name field that defaults to Round N, where N is
a 1 up counter for the rounds in that tournament.  Owners may edit that
to another name.

Also removed the seating.html template which is not used by tomas.  It
was superceded by tables.html.

--- a/templates/roundsettings.html
+++ b/templates/roundsettings.html
@@ -2,10 +2,14 @@
 	type="text/javascript" />
 {% for round in rounds %}
 	<div class="round" data-roundid="{{ round['id'] }}">
-		<h2>Round {{ round['number'] }}</h2>
+		<h2> {{ '{name} ({number})'.format(**round) }}</h2>
 
 		<label for="round{{ round['id'] }}-ordering">Ordering</label>
 		<span id="round{{ round['id'] }}-ordering" class="orderingselect roundsetting" data-colname="Ordering" data-value="{{ round['ordering'] }}">{{ round['orderingname'] }}</span>
+
+		<br />
+		<label for="round{{ round['id'] }}-name">Name</label>
+		<input type="text" class="roundsetting" id="round{{ round['id'] }}-name" data-colname="Name" value="{{ round['name'] }}"/>
 
 		<br />
 		<label for="round{{ round['id'] }}-algorithm">Seating algorithm</label>
